<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back2"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".BMI">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="BMI Calculator"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:padding="5dp"
        android:layout_margin="20dp"
        android:id="@+id/bmi"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <androidx.cardview.widget.CardView

            android:layout_width="0dp"
            android:layout_height="110dp"
            android:layout_margin="12dp"
            android:layout_weight="1"
            app:cardCornerRadius="12dp"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="Age (Years)"
                    android:textSize="16sp"
                    android:textStyle="bold" />


                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:ems="3"
                    android:gravity="center"
                    android:hint=""
                    android:inputType="numberDecimal"
                    android:textSize="28sp" />


            </LinearLayout>


        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="110dp"
            android:layout_margin="12dp"
            android:layout_weight="1"
            app:cardCornerRadius="12dp"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="Weight (Kg)"
                    android:textSize="16sp"
                    android:textStyle="bold" />


                <EditText
                    android:id="@+id/edKg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:ems="3"
                    android:gravity="center"
                    android:hint=""
                    android:inputType="numberDecimal"
                    android:textSize="28sp" />


            </LinearLayout>


        </androidx.cardview.widget.CardView>


    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_margin="12dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="2dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="Height"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="Ft"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/edFeet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="3"
                    android:gravity="center"
                    android:hint=""
                    android:inputType="numberDecimal"
                    android:textSize="28sp" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="In"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/edIns"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="3"
                    android:gravity="center"
                    android:hint=""
                    android:inputType="numberDecimal"
                    android:textSize="28sp" />


            </LinearLayout>


        </LinearLayout>


    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="12dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="2dp">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="Bmi Result"
            android:textColor="#19B81F"
            android:textSize="18sp"
            android:textStyle="bold" />


    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardBtn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="12dp"
        app:cardBackgroundColor="#19B81F"
        app:cardCornerRadius="12dp"
        app:cardElevation="2dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Calculate"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />


    </androidx.cardview.widget.CardView>


</LinearLayout>